[FIX] API 수정